--- a/views/interview.ejs
+++ b/views/interview.ejs
@@ -233,7 +233,7 @@
                 JL("client").info("Interview completed.")
                 var instr = document.getElementById("textContent");
                 instr.innerHTML = "All reponse and images are uploaded. We are done. Thanks you.";
-                instr.style.display="flex";
+                instr.style.display="inline";
                 setTimeout(function () {
                    window.location.href= "/";
                 }, 5000);
